--- a/www/css/JoyStick.css
+++ b/www/css/JoyStick.css
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Inconsolata:400,700);
+
 /*
  * The MIT License (MIT)
  * 
@@ -24,6 +26,8 @@
 
 #joystick1 {
 	margin: 50px auto;
+	margin-top:4em;
+	margin-bottom:4em;
 }
 
 .joystickc {
@@ -37,13 +41,83 @@
 }
 
 .joysticki {
-    position: absolute;
-    border: 1px solid #ddd;
-    background: #eee url(http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.2/css/lightness/images/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x;
-    color: #333;
+	position: absolute;
+	border: 1px solid #ddd;
+	background-image: url('http://upload.wikimedia.org/wikipedia/commons/thumb/5/57/Beer_mug.svg/2000px-Beer_mug.svg.png');
+	background-size: contain;
+	color: #333;
+	background-color: white;
+	box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.4);
 }
 
 .JoyStick {
     position: relative;
     background: black;
+}
+
+.wrapper{
+	width:90%;
+	margin:0 auto;
+	margin-top:1em;
+}
+
+#message{
+	text-align: center;
+	margin-bottom:1em;
+	font-size:2em;
+	font-stretch:extra-condensed;
+	font-family: 'Inconsolata';
+}
+
+.btn{
+	width:100%;
+	background-color: rgba(21, 83, 22, 0.74);
+	color:white;
+	border:none;
+	height:50px;
+	max-width:500px;
+	margin:0 auto;
+	border-radius:5px;
+	font-size:30px;
+	display: block;
+	font-family: 'Inconsolata';
+	font-weight:700;
+	text-transform:uppercase;
+	letter-spacing:2px;
+}
+
+#debug{
+	background:black;
+	color:green;
+	font-family: 'Inconsolata';
+	padding:1em;
+	border-radius:10px;
+}
+
+#debug h2{
+	margin:0;
+	margin-bottom:10px;
+}
+
+#obama{
+	background-image: url('http://images.politico.com/global/2012/08/120821_obama_beer_605_reut.jpg');
+	background-size: contain;
+	width: 100%;
+	height: 300px;
+	background-repeat: no-repeat;
+	min-height: 300px;
+	margin: 0 auto;
+	margin-top: 1em;
+	display: inline-block;
+}
+
+#obama p{
+	color:white;
+	text-transform:uppercase;
+	text-shadow:0px 0px 4px black;
+	text-align:center;
+}
+
+body{
+	background: rgb(209, 209, 209);
 }
