--- a/www/css/index.css
+++ b/www/css/index.css
@@ -9,3 +9,54 @@
 .state.current {
 	display: block;
 }
+
+#ir-readings {
+	height: 200px;
+	overflow: auto;
+	position: relative;
+}
+
+.ir-threshold {
+	position: absolute;
+	height: 1px;
+	left: 0;
+	right: 0;
+	z-index: 10;
+}
+
+.ir-reading {
+	width: 15%;
+	background-color: darkgreen;
+	bottom: 0;
+	position: absolute;
+	height: 100px;
+}
+
+#ir-1 {
+	left: 0;
+}
+
+#ir-2 {
+	left: 20%;
+}
+
+#ir-3 {
+	left: 40%;
+}
+
+#ir-4 {
+	left: 60%;
+}
+
+#ir-5 {
+	left: 80%;
+}
+
+#wander-controls-container {
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+#wander-button {
+	font-size: 20px;
+}
